bookmark post is bookmarked
